--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,12 @@
   "functions": {
     "source": "packages/functions",
     "predeploy": "npm --prefix \"$RESOURCE_DIR\" run production",
-    "ignore": ["src/", "test/", "node_modules/"]
+    "runtime": "nodejs20",
+    "ignore": [
+      "src/",
+      "test/",
+      "node_modules/"
+    ]
   },
   "emulators": {
     "functions": {
@@ -39,7 +44,11 @@
     "cleanUrls": true,
     "trailingSlash": false,
     "public": "static",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "/api/**",
