--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -19,14 +19,14 @@
     "@google-cloud/pubsub": "^3.7.1",
     "axios": "^0.27.2",
     "firebase-admin": "11.10.0",
-    "firebase-functions": "4.4.1",
+    "firebase-functions": "^3.24.1",
+    "graphql-tag": "^2.12.6",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.8.1",
     "koa-ejs": "^4.2.0",
     "koa-router": "^7.4.0",
     "qs": "^6.11.0",
-    "shopify-api-node": "3.11.0",
-    "graphql-tag": "^2.12.6"
+    "shopify-api-node": "3.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
