--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -32,6 +32,8 @@
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-react": "^7.0.0"
   }
 }
