--- a/packages/assets/shopify.web.toml
+++ b/packages/assets/shopify.web.toml
@@ -3,5 +3,5 @@ port=3000
 auth_callback_path = ["/auth/shopify/callback", "/authSa/shopify/callback", "/auth/shopify/embed/callback", "/auth/shopify/embed/callback/updateScopes"]
 
 [commands]
-dev = "npm run watch:standalone"
+dev = "npm run watch:embed"
 build = "npm run production"
